--- a/frontend/category.html
+++ b/frontend/category.html
@@ -9,79 +9,183 @@
   <link rel="stylesheet" href="styles/bootstrap.min.css">
   <!--    Подключение наших стилей-->
   <link href="styles/filtr.css" rel="stylesheet">
+  <link href="styles/navbar.css" rel="stylesheet">
+
   <title></title>
 </head>
 <body>
-
-
 <!--Header нашей страницы-->
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div class="container">
-    <a href="#" class="navbar-brand">Стимул</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarContent">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Категории</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Что то там</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Что то там</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<!--<div class="container col-10">-->
+
+  <nav class="navbar navbar-expand-lg col-lg-10 navbar-light mx-auto">
+<!--    <div class="container">-->
+      <a href="" class="navbar-brand width-nav text-dark"><img src="images/1.jpeg" alt="logo" style="width: 50px">Дабай</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-p">
+          <li class="nav-item"><a href="#" class="nav-link active text-dark">Категории</a></li>
+          <li class="nav-item"><a href="#" class="nav-link active text-dark">Аукцион</a></li>
+          <li class="nav-item"><a href="#" class="nav-link active text-dark">Бог значет</a></li>
+          <li class="nav-item"><a href="#" class="nav-link active text-dark">Что писать</a></li>
+          <li class="nav-item"><a href="#" class="nav-link active text-dark">О нас</a></li>
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 width-nav-burger">
+          <li class="nav-but mx-auto">
+            <a href="" class="btn sign-in mx-sm-auto">Войти</a>
+          </li>
+          <li class="nav-but mx-auto">
+            <a href="" class="btn donating">Пожертвовать</a>
+          </li>
+        </ul>
+      </div>
+<!--    </div>-->
+  </nav>
 <!--Конец Header страницы-->
 
-  <section>
-    <ul>
-      <li class="list active" data-filter="all">Все</li>
-      <li class="list" data-filter="wolfik">Вулфик</li>
-      <li class="list" data-filter="qwerty">Йцукен</li>
-    </ul>
-<!--    <div class="product">-->
-<!--      <div class="itemBox wolfik"><img src="images/1.jpeg" alt=""></div>-->
-<!--      <div class="itemBox qwerty"><img src="images/2.jpg" alt=""></div>-->
-<!--      <div class="itemBox wolfik"><img src="images/1.jpeg" alt=""></div>-->
-<!--      <div class="itemBox qwerty"><img src="images/2.jpg" alt=""></div>-->
-<!--    </div>-->
+<!--Текст-->
+<div class="text-category d-flex justify-content-center align-items-center h-100">
+  <h1 class="text-center display-4">
+    <span class="text-black">Категории</span>
+    <span class="text-orange">Мероприятий</span>
+  </h1>
+</div>
+<!--Конец текста-->
+
+<section class="container fff col-12 mt-5 mb-4">
+  <ul class="row justify-content-center">
+    <li  data-filter="all" class="list active col-sm-auto col-md-3 col-lg-auto border1 me-2 mb-2">
+      <p class="text-center">Все</p>
+    </li>
+    <li  data-filter="culture" class="list col-sm-auto col-md-3 col-lg-auto border2 me-2 mb-2">
+      <p class="text-center">Культура</p>
+    </li>
+    <li  data-filter="zdravo" class="list col-sm-auto col-md-3 col-lg-auto border3 me-2 mb-2">
+      <p class="text-center">Здравоохранение</p>
+    </li>
+    <li  data-filter="eco" class="list col-sm-auto col-md-3 col-lg-auto border4 me-2 mb-2">
+      <p class="text-center">Экология</p>
+    </li>
+    <li  data-filter="sport" class="list col-sm-auto col-md-3 col-lg-auto border6 me-2 mb-2">
+      <p class="text-center">Спорт</p>
+    </li>
+    <li  data-filter="science" class="list col-sm-auto col-md-3 col-lg-auto border5 me-2 mb-2">
+      <p class="text-center">Наука и образование</p>
+    </li>
+  </ul>
+</section>
+<div class="container mt-auto col-lg-8 col-11">
       <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 py-2 wolfik itemBox">
-          <div class="card">
-            <img src="images/2.jpg" alt="" class="card-img-top">
+        <div class=" col-md-6 col-lg-4 py-2 culture itemBox mb-2">
+          <div class="card card-category">
+            <img src="images/category/1.png" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Qwerty</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                cum. Nobis obcaecati magni impedit eaque quaerat id consectetur omnis ipsam laudantium,
-                amet excepturi corrupti labore odit maiores sit explicabo recusandae.</p>
+              <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+              <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+              <button class="card-button2 mb-1">Подробнее</button>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 py-2 qwerty itemBox">
-          <div class="card">
-            <img src="images/1.jpeg" alt="" class="card-img-top">
+        <div class=" col-md-6 col-lg-4 py-2 science itemBox">
+          <div class="card card-category">
+            <img src="images/category/2.png" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Qwerty</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                cum. Nobis obcaecati magni impedit eaque quaerat id consectetur omnis ipsam laudantium,
-                amet excepturi corrupti labore odit maiores sit explicabo recusandae.</p>
+              <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+              <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+              <button class="card-button2 mb-1">Подробнее</button>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 py-2 wolfik itemBox">
-          <div class="card">
-            <img src="images/2.jpg" alt="" class="card-img-top">
+        <div class=" col-md-6 col-lg-4 py-2 culture itemBox">
+          <div class="card card-category">
+            <img src="images/category/3.png" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Qwerty</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                cum. Nobis obcaecati magni impedit eaque quaerat id consectetur omnis ipsam laudantium,
-                amet excepturi corrupti labore odit maiores sit explicabo recusandae.</p>
+              <h5 class="card-title  card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+              <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+              <button class="card-button2 mb-1">Подробнее</button>
             </div>
           </div>
+        </div>
+        <div class=" col-md-6 col-lg-4 py-2 culture itemBox">
+          <div class="card card-category">
+            <img src="images/category/4.png" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+              <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+              <button class="card-button2 mb-1">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <div class=" col-md-6 col-lg-4 py-2 culture itemBox">
+          <div class="card card-category">
+            <img src="images/category/5.png" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+              <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+              <button class="card-button2 mb-1">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <div class=" col-md-6 col-lg-4 py-2 culture itemBox">
+          <div class="card card-category">
+            <img src="images/category/6.png" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+              <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+              <button class="card-button2 mb-1">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+  </div>
+
+
+<!--Текст-->
+<div class="text-category d-flex justify-content-center align-items-center h-100 mb-2">
+  <h1 class="text-center display-4">
+    <span class="text-black">Завершенные</span>
+    <span class="text-orange">проекты</span>
+  </h1>
+</div>
+<!--Конец текста-->
+<div class="container mt-auto col-lg-8 col-11">
+  <div class="row">
+    <div class=" col-md-6 col-lg-4 py-2 culture itemBox mb-2">
+      <div class="card card-category">
+        <img src="images/category/7.png" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+          <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+          <button class="card-button2 mb-1">Подробнее</button>
         </div>
       </div>
-  </section>
+    </div>
+    <div class=" col-md-6 col-lg-4 py-2 science itemBox">
+      <div class="card card-category">
+        <img src="images/category/8.png" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+          <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+          <button class="card-button2 mb-1">Подробнее</button>
+        </div>
+      </div>
+    </div>
+    <div class=" col-md-6 col-lg-4 py-2 culture itemBox">
+      <div class="card card-category">
+        <img src="images/category/9.png" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title  card-h5-2">Осуществление ремонтно-восстановительных работ на объекте</h5>
+          <p class="">Выполнение ремонтно-восстановительных работ по объекту "Здание ГКУ РС(Я) "Мирнинский социально-реабилитационный центр для несовршеннолетних "Харысхал" в г.Мирный"</p>
+          <button class="card-button2 mb-1">Подробнее</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script   src="https://code.jquery.com/jquery-3.6.4.js"   integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="   crossorigin="anonymous"></script>
 <script>
   $(document).ready(function(){
