--- a/frontend/person.html
+++ b/frontend/person.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!--    Подключение наших стилей-->
-    <link href="styles/style2.css" rel="stylesheet">
+    image 1.png
+    image 2.png
+    image 3.png
+    image 5.png
+    image 6.png
 
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet"/>
 </head>
